# buffbrain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
clipmind-tauri/: package-lock.json  package.json
clipmind-tauri/scripts/: dev.sh
clipmind-tauri/src/: App.tsx  api.ts  main.tsx  style.css
clipmind-tauri/src-tauri/: Cargo.toml  tauri.conf.json
clipmind-tauri/src-tauri/capabilities/: default.json
clipmind-tauri/src-tauri/icons/: icon.icns
clipmind-tauri/src-tauri/src/: clipboard.rs  commands.rs  db.rs  embed.rs  lib.rs  main.rs  types.rs
clipmind-tauri/src/components/: ClipList.tsx  ClipPreview.tsx  SearchBar.tsx  Settings.tsx
clipmind-tauri/src/types/: index.ts
docs/: CNAME  index.html
scripts/: generate_icons.py
src/: api.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  db.rs  embed.rs  lib.rs  storage.rs  types.rs
src/assets/: create-icon.js  generate-icon.js  generate-icons.js
src/components/: Icons.tsx  SearchBar.tsx  Settings.tsx
src/types/: index.ts
