[package]
name = "buffbrain"
version = "0.1.0"
description = "BuffBrain - AI Clipboard Manager (Tauri)"
authors = ["BuffBrain"]
edition = "2021"

[lib]
name = "buffbrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
keyring = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
once_cell = "1"
parking_lot = "0.12"
anyhow = "1"
dirs = "5"
ort = "2.0.0-rc.12"
tokenizers = "0.23.1"
ndarray = "0.16"
